test-ui/ui/invalid_msg_send.stderr
error: unexpected end of macro invocation
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj] };
  |                                       ^ missing tokens in macro arguments

error: unexpected end of macro invocation
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj,] };
  |                                        ^ missing tokens in macro arguments

error: no rules expected the token `)`
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a:] };
  |                          ^^^^^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no rules expected the token `)`
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: b c] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no rules expected the token `a`
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: b, c d] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
  = note: this error originates in the macro `$crate::__msg_send_parse` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no rules expected the token `,`
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: b c: d,] };
  |                                                  ^ no rules expected this token in macro call

error: no rules expected the token `b`
 --> ui/invalid_msg_send.rs
  |
  |     let _: Result<(), Id<Object, Shared>> = unsafe { msg_send![obj, a: _, b: _] };
  |                                                                           ^ no rules expected this token in macro call

error[E0412]: cannot find type `c` in this scope
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: b: c] };
  |                                               ^
  |                                               |
  |                                               not found in this scope
  |                                               help: maybe you meant to write an assignment here: `let c`

error[E0412]: cannot find type `c` in this scope
 --> ui/invalid_msg_send.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: b: c] };
  |                                               ^
  |                                               |
  |                                               not found in this scope
  |                                               help: maybe you meant to write an assignment here: `let c`
